[package]
name = "replman"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
replman_derive = { path = "../replman_derive" }
anyhow = "1.0"
rustyline = "9.1"

[dev-dependencies]
indoc = "1.0"
test-case = "1.2"
pretty_assertions = "1.0.0"
difference = "2.0.0"
