[package]
name = "replman"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/Dzejkop/replman"
authors = ["Jakub Trąd <jakubtrad@gmail.com>"]
description = "An opinionated REPL framework"
documentation = "https://docs.rs/replman"
categories = ["repl", "command line"]
keywords = ["repl", "replman", "rustyline"]
readme = "../README.md"
include = ["../README.md", "../LICENSE"]

[dependencies]
replman_derive = { path = "../replman_derive" }
anyhow = "1.0"
rustyline = "9.1"

[dev-dependencies]
indoc = "1.0"
test-case = "1.2"
pretty_assertions = "1.0.0"
difference = "2.0.0"
