[package]
name = "replman_derive"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
replman_derive_impl = { path = "../replman_derive_impl" }
syn = { version = "1.0", features = ["full"] }
