[package]
name = "replman_derive"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/Dzejkop/replman"
authors = ["Jakub Trąd <jakubtrad@gmail.com>"]
description = "An opinionated REPL framework"
documentation = "https://docs.rs/replman"
categories = ["repl", "command line"]
keywords = ["repl", "replman", "rustyline"]
include = ["../README.md", "../LICENSE"]

[lib]
proc-macro = true

[dependencies]
replman_derive_impl = { path = "../replman_derive_impl" }
syn = { version = "1.0", features = ["full"] }
