[package]
name = "replman_derive_impl"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/Dzejkop/replman"
authors = ["Jakub Trąd <jakubtrad@gmail.com>"]
description = "An opinionated REPL framework"
documentation = "https://docs.rs/replman"
categories = ["repl", "command line"]
keywords = ["repl", "replman", "rustyline"]

[dependencies]
proc-macro2 = "1.0"
syn = { version = "1.0", features = ["full", "extra-traits"] }
quote = "1.0"
convert_case = "0.4"
